clusters/production/media/lidarr/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lidarr
          securityContext:
            allowPrivilegeEscalation: false
          image: linuxserver/lidarr:3.1.0 # {"$imagepolicy": "flux-system:lidarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
          startupProbe:
            tcpSocket:
              port: 8686
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: lidarr-downloads
              mountPath: /downloads
            - name: lidarr-music
              mountPath: /music
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: pvc-lidarr-config
        - name: lidarr-downloads
          persistentVolumeClaim:
            claimName: pvc-media-downloads
        - name: lidarr-music
          persistentVolumeClaim:
            claimName: pvc-media-music
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app: lidarr
  ports:
    - name: lidarr
      port: 8686
      targetPort: 8686
  type: ClusterIP
