clusters/production/media/lidarr/lidarr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - lidarr.rees.ca
  rules:
  - backendRefs:
    - name: lidarr
      port: 8686
