clusters/production/media/lidarr/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx
  rules:
  - host: lidarr.rees.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lidarr
            port:
              number: 8686
